package com.smile.facade;

/**
 * @author smi1e
 * Date 2019/8/19 15:04
 * Description
 */
public interface Computer {
    void on();
    void off();
}
